# covid19

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.template  README.md  app.py  pyproject.toml
src/: gunicorn_config.py
src/covid19/: __init__.py  dash_app.py  dash_deaths.py  dash_footer.py  dash_forecast.py  dash_infected.py  dash_main.py  data.py  forecast.py
src/covid19/resources/: world_population.csv
