[tool.poetry]
name = "covid19"
version = "0.1.0"
description = ""
authors = ["Martin Høy <marhoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.1"
dash = "^1.9.1"
dash-bootstrap-components = "^0.9.1"
requests = "^2.23.0"
requests-cache = "^0.5.2"
gunicorn = {version = "^20.0", optional = true}

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
flake8 = "^3.7.9"
isort = "^4.3.21"
black = "^19.10b0"
mypy = "^0.770"
pre-commit = "^2.2.0"
jupyter = "^1.0.0"
matplotlib = "^3.2.0"
flake8 = "^3.7.9"
isort = "^4.3.21"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
