[tool.poetry]
name = "covid19"
version = "0.1.0"
description = ""
authors = ["Martin Høy <marhoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.0.1"
dash = "^1.9.1"
dash-bootstrap-components = "^0.10.7"
requests = "^2.23.0"
requests-cache = "^0.5.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
flake8 = "^3.7.9"
isort = "^5.6.4"
black = "^20.8b1"
mypy = "^0.790"
pydocstyle = "^5.0.2"
pre-commit = "^2.2.0"
jupyter = "^1.0.0"
matplotlib = "^3.2.0"

[tool.poetry.extras]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
